force-app/main/default/objects/passport__c/passport__c.object-meta.xml
<CustomObject>
    <label>passport</label>
    <nameField>
        <displayFormat>p-{0000}</displayFormat>
        <label>passport Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>passports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>