force-app/main/default/objects/passport__c/fields/Expired_date__c.field-meta.xml
<CustomField>
    <fullName>Expired_date__c</fullName>
    <label>Date of Expiry</label>
    <type>Date</type>
</CustomField>