force-app/main/default/objects/passport__c/fields/Issued_date__c.field-meta.xml
<CustomField>
    <fullName>Issued_date__c</fullName>
    <label>Date of Issue</label>
    <type>Date</type>
</CustomField>