force-app/main/default/objects/passport__c/fields/Name_as_per_Passport__c.field-meta.xml
<CustomField>
    <fullName>Name_as_per_Passport__c</fullName>
    <description>Name As per passport</description>
    <formula>First_Name__c &amp; &quot; &quot; &amp; Last_name__c &amp; &quot; &quot; &amp; Surname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name As per passport</inlineHelpText>
    <label>Name as per Passport</label>
    <type>Text</type>
</CustomField>