force-app/main/default/objects/passport__c/fields/passport_Number__c.field-meta.xml
<CustomField>
    <fullName>passport_Number__c</fullName>
    <label>passport Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>