force-app/main/default/objects/passport__c/validationRules/Passport_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(    

 REGEX(        

  passport_Number__c ,         

&quot;^[A-Z][0-9]{7}$&quot;    

 ) )</errorConditionFormula>
    <errorMessage>Please Enter the correct Passport Number</errorMessage>
</ValidationRule>