force-app/main/default/objects/passport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Name_as_per_Passport__c</columns>
    <columns>passport_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>